fix layout on mobile screens

--- a/components/css-modules/contacts.module.css
+++ b/components/css-modules/contacts.module.css
@@ -1,6 +1,8 @@
 .main {
     padding: 1rem;
     text-align: center;
+    border: black 0.25rem solid;
+    border-top: none;
 }
 
 .links {
