--- a/components/css-modules/header.module.css
+++ b/components/css-modules/header.module.css
@@ -7,18 +7,19 @@
     border-bottom: 0.25rem solid black;
     width: 75%;
     margin: 0 auto;
+    border: black 0.25rem solid;
 }
 
 .name {
     display: flex;
-    max-width: 25%;
+    /* max-width: 25%; */
 }
 
 .letter {
-    aspect-ratio: 1; 
     width: 4rem;
-    padding: 0.5rem;
-    margin: 0.5rem;
+    height: 4rem;
+    padding: 0.25rem;
+    margin: 0.25rem;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -26,7 +27,7 @@
     background-color: #e81416;
     border: black 0.25rem solid;
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     box-shadow: 0.25rem 0.25rem black;
     text-shadow: 0.1rem 0.1rem #000000;  
 }
@@ -73,6 +74,10 @@
     .header {
         width: 100%;
     }
+
+    .letter:hover {
+        animation: none;
+    }
 }
 
 @media (max-width: 900px) {
@@ -83,14 +88,33 @@
 
     }
     .name {
-        width: 100%;
+        width: fit-content;
         max-width: 100%;
         justify-content: center;
         align-items: center;
         text-align: center;
+        border: #000000 0.25rem solid;
+        box-shadow: 0.25rem 0.25rem black;
     }
 
     .navTabs {
         display: none;
+    }
+
+    .letter {
+        aspect-ratio: 1;
+        height: auto;
+        padding: 0;
+        margin: 0;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        color: whitesmoke;
+        background-color: #e81416;
+        border: none;
+        font-weight: bold;
+        font-size: 1.5rem;
+        box-shadow: none;
+        text-shadow: 0.1rem 0.1rem #000000;  
     }
 }
